# cvedia-cli

./: AUTHORS  ChangeLog  ChangeLog.md  NEWS  README  README.md  common.mk  configure.ac
docker/: README.md  docker-compose.yml
docker/cvedia-cli/: Dockerfile
include/: api.hpp  caffeimagedata.hpp  csvwriter.hpp  curlreader.hpp  cvedia.hpp  datareader.hpp  datawriter.hpp  functions.hpp  globals.hpp  hdf5writer.hpp  imagemean.hpp  luamodules.hpp  luawriter.hpp  md5.hpp  metadb.hpp  optionparser.h  pythonmodules.hpp  pythonwriter.hpp  tfrecordswriter.hpp
scripts/: install_ubuntu_14.sh  install_ubuntu_16.sh
src/: Makefile.am  api.cpp  api.hpp  caffeimagedata.cpp  csvwriter.cpp  csvwriter.hpp  curlreader.cpp  curlreader.hpp  cvedia.cpp  cvedia.hpp  datareader.hpp  datawriter.hpp  functions.cpp  functions.hpp  hdf5writer.cpp  imagemean.cpp  luamodules.cpp  luawriter.cpp  md5.cpp  metadb.cpp  pythonmodules.cpp  pythonwriter.cpp  tfrecordswriter.cpp
src/lua/: recordswriter.lua
src/python/: tfrecordswriter.py
